--- a/static/css/custome.css
+++ b/static/css/custome.css
@@ -33,8 +33,8 @@ input[type="time"]::-webkit-calendar-picker-indicator {
 .input-group-text:focus {
 	/* box-shadow: none; */
 	/* box-shadow:3px #005169; */
-	box-shadow: 0px 0px 0px 2px #bfd9f7;
-	border: 0.5px solid #0072f5;
+	box-shadow: 0px 0px 0px 1px #ffcf4d;
+	border: 0.5px solid #ffcf4d;
 	-webkit-transition: none;
 	-moz-transition: none;
 	transition: none;
